<resources>
    <string name="app_name">Functions</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="app_title">Functions</string>
    <string name="main_activite_title">DEFINE THE DATA</string>
    <string name="main_activite_operation">OPERATION</string>
    <string name="main_activite_1_operation">SECOND</string>
    <string name="title_activity_graph">Functions</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="First_operation_activity_main">First Operation</string>
    <string name="Second_operation_activity_main">Second Operation</string>
    <string name="Rule_title">RULE</string>
    <string name="First_Rule">X >= </string>
    <string name="First_Rule_hint">Enter a number</string>
    <string name="Second_Rule">X >= </string>
    <string name="Second_Rule_hint">Enter a number</string>
    <string name="third_equation">Third Equation</string>
    <string name="third_Rule">X >= </string>
    <string name="third_Rule_hint">Enter a number</string>
    <string name="Limit">Limit</string>
    <string name="equation_1">Equation 1</string>
    <string name="equation_2">Equation 2</string>
    <string name="equation_3">Equation 3</string>
    <string name="title_activity_navigation">Menu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="card_title">Opciones de operaciones</string>
    <string name="card_title_card_eqn">Graficar Ecuaciones</string>

    <string name="card_title_card_tri">Trigonometria</string>
    <string name="card_title_card_tri_title">Elija que desea operar</string>
    <string name="card_title_card_tri_triang">Encontrar la hipotenusa de un triaungulo</string>
    <string name="card_title_card_tri_triang_cat">Encontrar un cateto de un triaungulo</string>
    <string name="card_title_card_tri_btn">Encontrar</string>

    <string name="card_title_card_hip_title">Encontrar Hipotenusa</string>
    <string name="card_title_card_hip_cat1">Cateto</string>
    <string name="card_title_card_hip_hip">"?"</string>
    <string name="title_activity_hip">Hipotenusa</string>
    <string name="title_activity_cat">Cateto</string>

    <string name="card_title_card_cat_title">Encontrar Cateto</string>
    <string name="card_title_card_cat_hip">Hipotenusa</string>
    <string name="card_title_card_trig">Senos, Cosenos, Tangente</string>
    <string name="title_activity_sen_cos_tan">SenCosTanActivity</string>
    <string name="title_activity_ley_sen_cos_tan">Ley de Senos, Cosenos y Tangente</string>
    <string name="angle">Angulo</string>
    <string name="cat">Lado</string>
    <string name="resp">Respuesta</string>
    <string name="title_activity_trigonometry2">Opciones</string>
</resources>
