<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_cat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="tv.tvquetzachapin.graphfunctions.Activites.CatActivity"
    tools:showIn="@layout/activity_cat">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/card_title_card_cat_title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/textView11" />

        <ImageView
            android:layout_width="240sp"
            android:layout_height="240sp"
            app:srcCompat="@drawable/trigonometry"
            android:id="@+id/imageView6"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView6"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/textView11"
            android:layout_toStartOf="@+id/textView11">

            <EditText
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:hint="@string/card_title_card_hip_cat1"
                android:id="@+id/ct4"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="227dp"
            android:layout_toLeftOf="@+id/textView11"
            android:layout_toStartOf="@+id/textView11">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/card_title_card_cat_hip"
                android:id="@+id/ct5"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:text="@string/card_title_card_hip_hip"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="33dp"
            android:layout_marginEnd="33dp"
            android:id="@+id/txtCat" />
    </RelativeLayout>
</RelativeLayout>
