<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_trigonometric"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tv.tvquetzachapin.graphfunctions.Activites.TrigonometricActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:paddingTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="31dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/trigonometry"
                android:id="@+id/imageView4"
                style="@style/MyCardViewStyle"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="103dp">

                <TextView
                    android:text="@string/card_title_card_tri_triang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5"
                    android:textAlignment="center"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="124dp"
                    android:layout_marginStart="124dp" />

                <Button
                    android:text="@string/card_title_card_tri_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/btn"
                    android:id="@+id/btnHipotenusa"
                    android:layout_below="@+id/textView5"
                    android:layout_alignLeft="@+id/textView5"
                    android:layout_alignStart="@+id/textView5"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:text="@string/card_title_card_tri_title"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="163dp"
            android:id="@+id/crd">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/trian"
                android:id="@+id/imageView5" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="103dp">

                <TextView
                    android:text="@string/card_title_card_tri_triang_cat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView9"
                    android:textAlignment="center"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="124dp"
                    android:layout_marginStart="124dp" />

                <Button
                    android:text="@string/card_title_card_tri_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="41dp"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/btn"
                    android:id="@+id/btnCat"
                    android:layout_alignLeft="@+id/textView9"
                    android:layout_alignStart="@+id/textView9"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/crd">

            <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/tdd"
            android:id="@+id/imageView8"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:text="@string/card_title_card_tri_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="41dp"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/btn"
                    android:id="@+id/btnTrig"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignLeft="@+id/textView12"
                    android:layout_alignStart="@+id/textView12" />

                <TextView
                    android:text="@string/card_title_card_trig"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView12"
                    android:layout_marginRight="41dp"
                    android:layout_marginEnd="41dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</RelativeLayout>
