<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activites.MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_activite_title"
                android:id="@+id/main_activity_txt_helper"
                android:textSize="15sp"
                android:fontFamily="monospace"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_main_logo"
                android:src="@drawable/eqcolor"
                android:layout_below="@+id/main_activity_txt_helper"
                android:layout_centerHorizontal="true" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:paddingBottom="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@drawable/text_cursor_cyan"
                android:textSize="14sp"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="20"
                app:met_primaryColor="?colorAccent"
                app:met_singleLineEllipsis="true"
                android:hint="@string/equation_1"
                android:id="@+id/main_activity_input_operation_first"
                android:layout_below="@+id/img_main_logo"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="16dp"
                android:layout_toLeftOf="@+id/img_main_logo"
                android:layout_toStartOf="@+id/img_main_logo" />

            <Spinner
                android:paddingBottom="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:layout_alignBaseline="@+id/main_activity_input_operation_first"
                android:layout_alignBottom="@+id/main_activity_input_operation_first"
                android:layout_alignLeft="@+id/img_main_logo"
                android:layout_alignStart="@+id/img_main_logo"
                android:layout_alignRight="@+id/main_activity_txt_helper"
                android:layout_alignEnd="@+id/main_activity_txt_helper" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:paddingBottom="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@drawable/text_cursor_cyan"
                android:textSize="14sp"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="20"
                app:met_primaryColor="?colorAccent"
                app:met_singleLineEllipsis="true"
                android:hint="@string/Limit"
                android:id="@+id/main_activity_first_rule"
                android:textAlignment="textEnd"
                android:layout_alignTop="@+id/main_activity_input_operation_first"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toRightOf="@+id/textView"
                android:layout_toEndOf="@+id/textView" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@drawable/text_cursor_cyan"
                android:textSize="14sp"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="20"
                app:met_primaryColor="?colorAccent"
                app:met_singleLineEllipsis="true"
                android:hint="@string/equation_2"
                android:id="@+id/Second_operation_input_main"
                android:layout_below="@+id/textView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="16dp"
                android:layout_toLeftOf="@+id/textView"
                android:layout_toStartOf="@+id/textView" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textSecondRule"
                android:layout_alignBaseline="@+id/Second_operation_input_main"
                android:layout_alignBottom="@+id/Second_operation_input_main"
                android:layout_alignLeft="@+id/textView"
                android:layout_alignStart="@+id/textView"
                android:layout_alignRight="@+id/textView"
                android:layout_alignEnd="@+id/textView" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@drawable/text_cursor_cyan"
                android:textSize="14sp"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="20"
                app:met_primaryColor="?colorAccent"
                app:met_singleLineEllipsis="true"
                android:hint="@string/Limit"
                android:textAlignment="textEnd"
                android:id="@+id/main_activity_second_rule"
                android:layout_alignTop="@+id/Second_operation_input_main"
                android:layout_toRightOf="@+id/textSecondRule"
                android:layout_toEndOf="@+id/textSecondRule" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@drawable/text_cursor_cyan"
                android:textSize="14sp"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="20"
                app:met_primaryColor="?colorAccent"
                app:met_singleLineEllipsis="true"
                android:hint="@string/equation_3"
                android:id="@+id/third_eqn"
                android:layout_below="@+id/textSecondRule"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="21dp"
                android:layout_toLeftOf="@+id/textSecondRule"
                android:layout_toStartOf="@+id/textSecondRule" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textThirdRule"
                android:layout_alignBaseline="@+id/third_eqn"
                android:layout_alignBottom="@+id/third_eqn"
                android:layout_alignLeft="@+id/textSecondRule"
                android:layout_alignStart="@+id/textSecondRule"
                android:layout_alignRight="@+id/textSecondRule"
                android:layout_alignEnd="@+id/textSecondRule" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@drawable/text_cursor_cyan"
                android:textSize="14sp"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="20"
                app:met_primaryColor="?colorAccent"
                app:met_singleLineEllipsis="true"
                android:hint="@string/Limit"
                android:textAlignment="textEnd"
                android:id="@+id/main_activity_third_rule"
                android:layout_alignTop="@+id/third_eqn"
                android:layout_toRightOf="@+id/textThirdRule"
                android:layout_toEndOf="@+id/textThirdRule" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>


